test/compile-fail/resolution/use/crate-name-from-mod/expected.txt
error: unresolved import `a`
 --> top.rhdl:2:15
  |
2 |     use crate::a;
  |                ^ no `a` in `crate`
